css/stylesheet.css
html, body {
	margin: 0px;
	height: 100%;
	width: 100%;
}

#header {
	/*height correlates with #image-content height*/
	padding: 2%;
	height: 4%;
	width: 100%;
	/*background-color: pink;*/
}

#header ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
	height: 5vmin;
	display: block;
}

#header li {
	padding: 1vmin;
	/*min-width: 10vmin;*/
	float: left;
	height: 100%;
}

#header li:hover {

}

#header li a {
	display: block;
	height: 100%;
	/*padding: 8px;*/
	font-size: 3vmin;
}

.content {
	background-color: white;
	height: 80%;
	width: 80%;
	padding: 10%;
}

/*
 * Big Image
 */

#image-content {
	height: 92%;
	width: 100%;
	padding: initial;
}

#big-logo {
	height: 90%;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

#header-span {
	display: table-cell;
	vertical-align: middle;
}

#header-label {
	display: table;
	font-size: 25vmin;
	color: rgba(43, 51, 42, 1);
	width: 100%;
	text-align: center;
	margin-top: 0;
	position: absolute;
	letter-spacing: 1vmin;
	height: 90%;
	text-transform: uppercase;
	/*Kudos to Mina for this text-shadow*/
	text-shadow: -3px 0px white;
}

.remove-end-space {
	letter-spacing: 1px;
}

/*
 * About
 */

#about-content {
	/*background-color: pink*/
	background-color: gray;

	/*new stuff*/
	height: auto;
	padding: 0;
	width: 100%;
	background-image: url('../img/game1.png');
	background-repeat: no-repeat;

	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
}

#about-content-text {
	color: rgba(255, 255, 255, 1);
	font-size: 5vh;
	text-align: center;
	z-index: 100;
}

#about-darken {
	padding: 10%;
	background: rgba(0, 0, 0, 0.5);
	height: auto;
	width: 80%;
}

/*
 * Skills
 */

#skills-content {
	background-color: rgba(82, 73, 92, 1);
	/*background-color: white;*/
}

#skills-boxes-wrapper {
	height: 70%;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 5%;
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: space-between;
}

.skills-box {
	width: 28%;
	height: 100%;
	margin: 0%;
	margin-top: auto;
	margin-bottom: auto;
	background-color: white;
	display: inline-block;
	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
	border-radius: 4px;
	padding: 1%;
	text-align: center;
}

.skills-icon {
	width: 10vmin;
	height: 10vmin;

	border-radius: 5vmin;
	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);

	margin-left: auto;
	margin-right: auto;

	background-repeat: no-repeat;
	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
}

#skills-icon-coding {
	background-image: url('../img/CodingIcon.png');
}

#skills-icon-animation {
	
}

#skills-icon-cooking {
	background-image: url('../img/CookingIcon2.png');
}

.skills-box-title {
	color: rgba(82, 73, 92, 1);
	font-size: 5vh;
}

.skills-box-content {
	padding: 7%;
	font-size: 2.5vh;
	/*margin-top: 1vh;*/
	color: rgba(82, 73, 92, 1);
}

/*
 * Language Familiarity
 */

 #language-familiarity-content {
	background-color: rgba(82, 73, 92, 1);
 }

/*
 * Title Stuff
 */

.title {
	/*color: rgba(255, 255, 255, 0.9);*/
	/*The blue one is below*/
	color: rgba(51, 227, 255, 0.7);
	/*color: black;*/
	/*color: rgba(71,241, 53, 0.5);*/
	font-size: 10vh;
	text-align: center;
	z-index: 100;
}

/*
 * Link Stuff
 */

a:link {
	color: rgba(51, 227, 255, 0.7);
	text-decoration: none;
}

a:visited {
	color: rgba(51, 227, 255, 0.7);
	text-decoration: none;
}

/*Only this one is different...*/
a:hover {
	color: rgba(51, 227, 255, 0.9);
	text-decoration: none;
}

a:active {
	color: rgba(51, 227, 255, 0.7);
	text-decoration: none;
}

/*
 * Navigation Link Stuff
 */

#header a:link {
	/*color: rgba(51, 227, 255, 0.7);*/
	color: rgba(82, 73, 92, 1);
	text-decoration: none;
}

#header a:visited {
	/*color: rgba(51, 227, 255, 0.7);*/
	color: rgba(82, 73, 92, 1);
	text-decoration: none;
}

/*Only this one is different...*/
#header a:hover {
	/*color: rgba(51, 227, 255, 0.9);*/
	color: rgba(52, 46, 59, 1);
	text-decoration: none;
}

#header a:active {
	/*color: rgba(51, 227, 255, 0.7);*/
	color: rgba(82, 73, 92, 1);
	text-decoration: none;
}

